Add Custom font into the page

--- a/index.html
+++ b/index.html
@@ -2,57 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" media="screen, projection" href="_/css/main.scss">
 
-    <style>
-        @font-face {
-            font-family: 'Mj_Casablanca';
-            src: url('Mj_Casablanca.eot');
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        @font-face {
-            font-family: 'Mj_Casablanca';
-            src: url('Mj_Casablanca.eot') format('eot'),
-            url('Mj_Casablanca.woff') format('woff'),
-            url('Mj_Casablanca.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-
-
-        @font-face {
-            font-family: 'Mj_Casablanca';
-            src: url('Mj_Casablanca.eot');
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        @font-face {
-            font-family: 'Mj_Casablanca';
-            src: url('Mj_Casablanca.eot') format('eot'),
-            url('Mj_Casablanca.woff') format('woff'),
-            url('Mj_Casablanca.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-        
-
-        body{
-            font-family: 'Mj_Casablanca'
-        }
-    </style>
 </head>
 
 <body>
 
-    this is test
 
-    برای یت آزمایش ساده
+<div class="boxText">  this is test برای یت آزمایش ساده</div>
 
 </body>
 
